package Model;
public enum Couleurs {
    BLEU,
    ORANGE,
    ROUGE,
    VERT,
    VIOLET,
    JAUNE,
    NOIR,
    BLANC
}