@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members

class Main{
    +main(args : String){static}
}

package models
{
    class Plateau
    {
        -nomJoueur : String
        +createPartie(nbManches: Integer, nbPionsDispo: Integer, nbPionsCombinaison: Integer, nbTentatives: Integer, typeIndice: Integer): Partie
        +setJoueur(nom: String)
        +getNomJoueur() : String
        +addObserver(mastermindObserver: MastermindObserver)
    }


    class Partie
    {
        - nbManches: Integer
        - nbPionsDispo: Integer
        - nbPionsCombinaison: Integer
        - nbTentatives: Integer
        - typeIndice: Integer
        - mancheCount : Integer
        - score: Integer
        - tabScore : Integer[*]
        - tabTenta : Integer[*]
        + <<create>> Partie(observers: MastermindObserver[*], nbManches: Integer, nbPionsDispo: Integer, nbPionsCombinaison: Integer, nbTentatives: Integer, typeIndice: Integer)
        + createManche(): Manche
        + updateScore()
        + getScore(): Integer
        + getManchesCount() : Integer
        + getNbManches() : Integer
        + getTabScores() : Integer[*]
        + getTabTenta() : Integer[*]
        - notifyObserversShowAvaibleColors()
        - notifyObserversInit()
    }


    class Manche
    {
        - nbTentativesMax: Integer
        - tailleCombinaison: Integer
        - nbPionsDispo: Integer
        - typeIndice: Integer
        - score: Integer

        + <<create>> Manche(nbPionsDispo: Integer, tailleCombinaison: Integer, nombreTentatives: Integer, obervers: MastermindObserver[*], typeIndice: Integer)
        + createTentative(): Tentative
        + addTentative(tentative : Tentative)
        + genererCombinaisonAleatoire()
        + verifierCombinaisonIndices() : Boolean
        + couleurDansCombinaison(combinaisonSecrete: Combinaison, couleur: Couleurs): Boolean
        + initCompteur(compteur : <Couleurs, Integer>[*])
        + getScore(): Integer
        + giveUp()
        + getNbTenta() : Integer
        + getNbPionsCombi() : Integer
        + getNbTentativesMax() : Integer
        - notifyObserversStartTentative(nbPionsCombi: Integer)
        - notifyObserversNewManche(isWin : Boolean, nbTentatives : Integer)
        - notifyOberserversAddTentativeUpdateIndice(tentative : Tentative, indices: Indice[])
    }

    class Tentative
    {
        +<<create>>Tentative(tailleCombinaison : Integer)
        + setCombinaisonCouleur(combinaisonCouleur : Combinaison)
        + getCombinaison(): Combinaison
        + getIndices(): Indice[]
        + setIndicesCouleurs(indice: Indice, index: Integer)
    }

    class Combinaison
    {
        +<<create>>Combinaison(tailleCombinaison : Integer)
        +getCombinaison() : Couleurs[*]
        +genererCombinaisonAleatoire(dispoPions : Integer)
    }


    interface mastermindObserver <<interface>>
    {
        + init(manche: Manche, typeIndice: Integer, numManche: Integer)
        + showAvaibleColors(couleursDispo: Couleurs[])
        + startTentative(nbPionsCombi: Integer)
        + addTentativeUpdateIndice(manche: Manche, tentative: Tentative, indices: Indice[], typeIndice: Integer, score: Integer);
        + newManche(isWin : Boolean, nbTentatives : Integer)
    }

    enum Couleurs <<enumeration>>
    {
        +BLEU
        +ORANGE
        +ROUGE
        +VERT
        +VIOLET
        +JAUNE
        +NOIR
        +BLANC
    }

    enum Indice <<enumeration>>{
        +NOIR
        +BLANC
        +VIDE
    }

}



package view
{
    abstract class Views <<abstract>>
    {
        +<<create>>Views(nom : String)
        +loadCustomFont(style : Integer, size : Integer) : Font
        +setCustomFontForComponents(container : Container)
        +setCustomFontForComponents(container : Container, XFont : Font)
        +setCustomFontForComponents(components : Components[*])
        +setCustomFontForComponent(component : Component, XFont : Font)

    }
    class ViewStart extends Views
    {
        + <<create>> ViewStart(controller: GameController)
        + setParameters()
        + isValidNumber(text : String, typeField : Integer) : Boolean
    }


    class ViewGame extends Views implements mastermindObserver
    {
        - width: Integer
        - length: Integer
        +<<create>>ViewGame(gameController: GameController)
        + init(mancheActuelle : Manche, typeIndice : Integer, numManche : Integer)
        + showAvaibleColors(couleursDispo: Couleurs[])
        + startTentative(nbPionsCombi: Integer)
        + addTentativeUpdateIndice(mancheActuelle : Manche, tentative : Tentative, indices : Indice[], typeIndice : Integer, score : Integer)
        + newManche(isWin: Boolean, nbTentatives: Integer)
    }


    class ViewEnd extends Views
    {
        +<<create>>ViewEnd()
        + end(nomJoueur : String, score : Integer, tabScore : Integer[*], tabTenta : Integer[*])
        - animateBarVertical(barre : JProgressBar, valeurFinale : Integer)
    }
}


package controller
{
    class GameController
    {
        + <<create>> GameController(plateau: Plateau, viewEnd : ViewEnd)
        + gameStart()
        + createPartie(nomJoueur: String, nbManches: Integer, nbPionsDispo: Integer, nbPionsCombinaison: Integer, nbTentatives: Integer, typeIndice: Integer)
        + validerTentative(tentative: Combinaison)
        + giveUpManche()
    }
}


Plateau o-->Partie : Crée
Plateau "*" o--> "*\n-listObservers" mastermindObserver: observe <
Partie *---> "*\n -mancheActuelle" Manche : Crée >

Partie "*" o--> "*\n-listObservers" mastermindObserver: observe <
Manche "*" o--> "*\n-listObservers" mastermindObserver: observe <
Manche o-->"2..12\n -listTentatives" Tentative : Crée >
Manche o-down-> "4..8\n-compteurCouleurs"Couleurs

Tentative o--->"4..6 \n-indices" Indice : Possède >


ViewGame o-up-> "1\n -controller" GameController
ViewEnd o-up-> "1\n -controller" GameController
ViewStart o-up-> "1\n -controller" GameController

GameController o-down-> "1\n -viewEnd" ViewEnd
GameController o-left-> "1\n -partie" Partie: manipule >
GameController o-left-> "1\n -plateau" Plateau: utilise >
GameController o-left-> "1\n -mancheActuelle" Manche: manipule >
GameController o-left-> "1\n -tentativeActuelle" Tentative: manipule >

Main ..> Plateau : <<use>>
Main ..> GameController : <<use>>
Main ..> ViewGame : <<use>>
Main ..> ViewStart : <<use>>

Manche *--> "1\n -combinaisonSecrete" Combinaison
Tentative *--> "1\n -combinaisonCouleur" Combinaison
Combinaison o--> "4..6\n -combinaison" Couleurs


@enduml
